<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAddDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/colorPrimaryLight"
            android:elevation="5dp"
            android:text="@string/addDoctor" />

        <Button
            android:id="@+id/btnAddPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/colorPrimaryLight"
            android:elevation="5dp"
            android:text="@string/addPatient" />

        <Button
            android:id="@+id/btnAddAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/colorPrimaryLight"
            android:elevation="5dp"
            android:text="@string/addAdmin" />

        <Button
            android:id="@+id/btnViewPatients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/colorPrimaryLight"
            android:elevation="5dp"
            android:text="@string/viewPatientList" />

        <Button
            android:id="@+id/btnViewDoctors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/colorPrimaryLight"
            android:elevation="5dp"
            android:text="@string/viewDoctorList" />

    </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>