<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_horizontal"
            android:text="Add Administrator"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:cursorVisible="true"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingEnd="20dp"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            android:paddingEnd="20dp"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/adminID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="textPersonName"
            android:paddingEnd="20dp"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:hint="@string/phoneNumber"
            android:inputType="phone"
            android:paddingEnd="20dp"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingEnd="20dp"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/passwordRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:hint="@string/passwordRep"
            android:inputType="textPassword"
            android:paddingEnd="20dp"
            android:paddingStart="20dp" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryLight"
            android:elevation="5dp"
            android:text="@string/submit" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>