<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--<android.support.design.widget.AppBarLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:theme="@style/AppTheme.AppBarOverlay">-->

        <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dip"-->
        <!--android:background="@color/colorPrimary"-->
        <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->

        <!--</android.support.design.widget.AppBarLayout>-->

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/adminBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/admin"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/doctorBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/doctor"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/patientBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/patient"
            android:textColor="@color/white" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>