<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorAccentLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccentLight"
            android:orientation="vertical">

            <TextView
                android:id="@+id/patientId_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:elevation="3dp"
                android:gravity="center_horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="3dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/generalInfo"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/t"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/name"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/name_surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/birthDate"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/birthDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/broughtIn"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/brought_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/room"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/room"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/doctors"
                        android:textSize="16sp" />

                    <ListView
                        android:id="@+id/patientDoctorList"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_weight="2" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnAddDoc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/colorPrimaryMedium"
                    android:text="@string/addDoctor"
                    android:textColor="@color/white" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccentLight"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:gravity="center_horizontal"
                    android:text="@string/exams" />


                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ListView
                        android:id="@+id/patientExamList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </ScrollView>

            </LinearLayout>

            <Button
                android:id="@+id/btnDeleteUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/urgent"
                android:text="@string/deleteUser"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>