<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryMediumLight"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="Change Password"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/oldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/colorAccentLight"
            android:ems="10"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textCursorDrawable = '@null'/>

        <EditText
            android:id="@+id/newPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/colorAccentLight"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textCursorDrawable = '@null'/>

        <EditText
            android:id="@+id/newPassRep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/colorAccentLight"
            android:ems="10"
            android:hint="@string/new_password_repeat"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textCursorDrawable = '@null'/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cancel" />

            <Button
                android:id="@+id/btnChangePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/ok"
                android:text="Change" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>